# belgian-structured-communication

./: CHANGELOG.md  CNAME  README.md  belgian-structured-communication.cabal  doc-index.html  index.html
.github/workflows/: build-ci.yml
all/: doc-index-124.html  doc-index-126.html  doc-index-33.html  doc-index-36.html  doc-index-38.html  doc-index-42.html  doc-index-43.html  doc-index-45.html  doc-index-46.html  doc-index-47.html  doc-index-58.html  doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-92.html  doc-index-94.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  (+4 more)
belgian-structured-communication-0.1.0.0/: Finance-Belgium-StructuredCommunication.html  belgian-structured-communication.haddock  belgian-structured-communication.txt  doc-index.html  doc-index.json  index.html
belgian-structured-communication-0.1.0.0/src/: Finance.Belgium.StructuredCommunication.html
belgian-structured-communication-0.2.0.0/: Finance-Belgium-StructuredCommunication.html  belgian-structured-communication.haddock  belgian-structured-communication.txt  doc-index.html  index.html
belgian-structured-communication-0.2.0.0/src/: Finance.Belgium.StructuredCommunication.html
src/Finance/Belgium/: StructuredCommunication.hs
test/Finance/Belgium/: StructuredCommunicationSpec.hs
validity-0.12.0.1/: Data-Validity.html  doc-index.html  doc-index.json  index.html  validity.haddock  validity.txt
validity-0.12.0.1/src/: Data.Validity.html  Paths_validity.html
