name:                belgian-structured-communication
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/hapytex/belgian-structured-communication#readme
license:             BSD3
license-file:        LICENSE
author:              Willem Van Onsem
maintainer:          hapytexeu+gh@gmail.com
copyright:           2023 HaPyTeΧ
category:            finance
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Finance.Belgium.StructuredCommunication
  build-depends:
      base >= 4.7 && < 5
    , binary >= 0.2
    , QuickCheck >=2.1
    , text >= 0.1
    , validity >= 0.4.0.0
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/hapytex/belgian-structured-communication
